--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
   </head>
   <body>
     <div class="box1">
-      <a class="section1" href="#">Bring me down</a>
+      <button class="section1">Bring me down</button>
+      <!-- <a class="section1" href="#">Bring me down</a> -->
     </div>
     <div class="box2">
-      <a class="section2" href="#">Thanks</a>
+      <button class="section2">Back to top</button>
+      <!-- <a class="section2" href="#">Thanks</a> -->
       <img src="./dog.jpg" alt="picture of dog" />
     </div>
     <script src="app.js"></script>
